# ssh-remote-exec

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/lib/: cli.rs  config.rs  error.rs  executor.rs  lib.rs  model.rs  ssh.rs
